[package]
name = "echo-markets"
version = "0.1.0"
edition = "2021"

[dependencies]
async-graphql = { version = "7.0.2", default-features = false }
bcs = "0.1.3"
futures = "0.3.24"
linera-sdk = { version = "0.15.6" }
linera-views = { version = "0.15.6" }
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.85"
thiserror = "1.0.35"

[dev-dependencies]
linera-sdk = { version = "0.15.6", features = ["test"] }
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }

[[bin]]
name = "echo_markets_contract"
path = "src/contract.rs"

[[bin]]
name = "echo_markets_service"
path = "src/service.rs"
